--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_KEY = "https://facebook-backend-lilac.vercel.app"
+ # REACT_APP_API_KEY = "https://facebook-backend-lilac.vercel.app"
+ REACT_APP_API_KEY = "http://localhost:5000"
