--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
  # REACT_APP_API_KEY = "https://facebook-backend-lilac.vercel.app"
- REACT_APP_API_KEY = "http://localhost:5000"
+REACT_APP_API_KEY = "http://localhost:5000"
+LOGIN_TOKEN = "token"
