--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
  # REACT_APP_API_KEY = "https://facebook-backend-lilac.vercel.app"
-REACT_APP_API_KEY = "http://localhost:5000"
-# REACT_APP_API_KEY = "https://b86a-103-156-136-186.ngrok-free.app"
+# REACT_APP_API_KEY = "http://localhost:5000"
+REACT_APP_API_KEY = "https://bb40-2400-adc1-16b-5100-2982-9fc7-79f2-57bd.ngrok-free.app"
 REACT_APP_LOGIN_TOKEN = "token"
