--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
  # REACT_APP_API_KEY = "https://facebook-backend-lilac.vercel.app"
-REACT_APP_API_KEY = "http://localhost:5000"
-# REACT_APP_API_KEY = "https://ef63-2400-adc1-16b-5100-e134-ed48-681d-32dc.ngrok-free.app"
+# REACT_APP_API_KEY = "http://localhost:5000"
+REACT_APP_API_KEY = "https://8e2d-2400-adc1-16b-5100-3a-826f-fcaa-735a.ngrok-free.app"
 REACT_APP_LOGIN_TOKEN = "token"
